Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/varargs/5088429/T5088429Neg01.out
T5088429Neg01.java:19:9: compiler.err.ref.ambiguous: T5088429Neg01, kindname.constructor, T5088429Neg01(T5088429Neg01.A...), T5088429Neg01, kindname.constructor, T5088429Neg01(T5088429Neg01.A,T5088429Neg01.A...), T5088429Neg01
1 error
